--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,38 @@
 @import './common.scss';
 
+#app {
+  box-sizing: border-box;
+  position: relative;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
+  padding-bottom: 40px;
+  // background-image: linear-gradient(180deg,rgba(27,31,35,.065),rgba(27,31,35,0))!important;
+  // background-repeat: no-repeat!important;
+  background-size: 100% 200px!important;
+  background: #f2f2f2;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  overflow-y: scroll;
+  padding-right: 0 !important;
+}
+
+.el-popup-parent--hidden {
+  overflow: inherit;
+  overflow-y: scroll;
+}
+
+.el-dialog__body {
+  padding: 0 20px;
+}
+
 .clearfix {
   &:after {
     visibility: hidden;
@@ -9,4 +42,31 @@
     clear: both;
     height: 0;
   }
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 10px;
+  background-color: #fff;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #c4c4c4;
+  border-radius: 5px;
+}
+
+.main {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.container {
+  margin-top: 106px;
+  position: relative;
+  min-height: calc(100% - 40px);
+  overflow-y: auto;
 }
